--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -1,6 +1,205 @@
 {
-  "hello": "Привіт",
-  "save": "Зберегти",
-  "options": "Налаштування",
-  "gallery": "Галерея"
+  "app": {
+    "title":          "дисплей матриці"
+  },
+  "status": {
+    "reconnecting":   "Перепідключення..."
+  },
+  "tooltip": {
+    "hostname":       "Ім’я хоста: {host}",
+    "connected":      "Підключено до {url}",
+    "connectedDemo":  "Підключено до демонстратора даних",
+    "disconnected":   "Відключено від {url}"
+  },
+  "button": {
+    "changeTheme":    "Змінити тему"
+  },
+  "nav": {
+    "dashboard":       "Панель приладів",
+    "options":         "Налаштування",
+    "sensorsButtons":  "Датчики й Кнопки",
+    "testArea":        "Тестова зона",
+    "statistics":      "Статистика",
+    "updateBackup":    "Оновлення та Резервне копіювання",
+    "pixelGallery":    "Галерея пікселів",
+    "pixelCreator":    "Створювач пікселів",
+    "forum":           "Форум",
+    "blog":            "Блог",
+    "documentation":   "Документація",
+    "github":          "GitHub"
+  },
+  "home": {
+    "system":            "Система",
+    "liveview":          "Живий показ",
+    "sensors":           "Датчики",
+    "buttons":           "Кнопки",
+    "logs":              "Журнали",
+    "usermap":           "Карта користувачів",
+    "updateAvailable":   "Доступне оновлення до версії {version}!",
+    "activateTelemetry": "Увімкніть телеметрію, щоб побачити карту користувачів.",
+    "goToOptions":       "Щоб увімкнути телеметрію, перейдіть до",
+    "options":           "Налаштувань",
+    "andActivate":       "та увімкніть",
+    "sendTelemetry":     "Відправляти телеметрію",
+    "afterActivation":   "Після увімкнення може пройти до однієї хвилини, перш ніж дані стануть доступними."
+  },
+  "options": {
+    "buttons": {
+      "saveConfig":    "Зберегти налаштування",
+      "wifiReset":     "Скинути Wi-Fi",
+      "cancel":        "Скасувати",
+      "factoryReset":  "Скинути налаштування"
+    },
+    "defaults": {
+      "title":               "Налаштування за замовчуванням",
+      "matrixBrightness":    "Початкова яскравість матриці",
+      "scrollDelay":         "Затримка прокрутки тексту",
+      "hostname":            "Ім’я хоста",
+      "note":                "Примітка",
+      "bootScreen":          "Екран завантаження активний",
+      "batteryOnBoot":       "Показувати батарею при завантаженні",
+      "bootSound":           "Відтворювати звук при завантаженні",
+      "notifyFirmware":      "Повідомляти про нову прошивку"
+    },
+    "matrix": {
+      "title":               "Матриця",
+      "type":                "Тип матриці",
+      "correction":          "Корекція матриці"
+    },
+    "autoBrightness": {
+      "title":               "Автояскравість",
+      "label":               "Автояскравість",
+      "minBright":           "Мінімальна яскравість",
+      "maxBright":           "Максимальна яскравість",
+      "fromLux":             "Від люкс",
+      "toLux":               "До люкс"
+    },
+    "clock": {
+      "title":               "Годинник",
+      "ntpServer":           "NTP-сервер",
+      "utcOffset":           "Зсув UTC",
+      "format24":            "24-годинний формат",
+      "showSeconds":         "Показувати секунди",
+      "dst":                 "Літній час (DST)"
+    },
+    "mqtt": {
+      "title":               "MQTT",
+      "active":              "MQTT активний",
+      "server":              "Сервер",
+      "port":                "Порт",
+      "masterTopic":         "Головна тема",
+      "deviceTopic":         "Тема пристрою"
+    },
+    "telemetry": {
+      "title":               "Телеметрія",
+      "sendData":            "Надіслати дані",
+      "sendNow":             "Відправити зараз"
+    }
+  },
+  "matrixTypes": {
+    "1": "Тип 1 – за стовпцями",
+    "2": "Тип 2 – за рядками",
+    "3": "Тип 3 – плитковий 4×8 CJMCU (за стовпцями)",
+    "4": "Тип 4 – MicroMatrix ᵇʸ ᶠᵒᵒʳˢᶜʰᵗᵇᴀʀ",
+    "5": "Тип 5 – плитковий 4×8 CJMCU (за рядками)"
+  },
+  "matrixCorrection": {
+    "default": "За замовчуванням",
+    "typicalsmd5050": "Типовий SMD 5050",
+    "typical8mmpixel": "Типовий 8 мм піксель",
+    "tungsten40w": "Вольфрам 40 Вт",
+    "tungsten100w": "Вольфрам 100 Вт",
+    "halogen": "Галоген",
+    "carbonarc": "Вугільна дуга",
+    "highnoonsun": "Полуденне сонце",
+    "directsunlight": "Пряме сонячне світло",
+    "overcastsky": "Похмуре небо",
+    "clearbluesky": "Ясне блакитне небо",
+    "warmfluorescent": "Тепле люмінесцентне світло",
+    "standardfluorescent": "Стандартне люмінесцентне світло",
+    "coolwhitefluorescent": "Холодно-біле люмінесцентне світло",
+    "fullspectrumfluorescent": "Повний спектр люмінесцентного світла",
+    "growlightfluorescent": "Люмінесцентне світло для рослин",
+    "blacklightfluorescent": "УФ-лампа (чорне світло)",
+    "mercuryvapor": "Пари ртуті",
+    "sodiumvapor": "Пари натрію",
+    "metalhalide": "Металогалоген",
+    "highpressuresodium": "Високопресовий натрій"
+  },
+  "autoFallbackAnimation": {
+    "0": "Немає",
+    "1": "Згасання",
+    "2": "Затирання кольоровою смугою",
+    "3": "Зигзаг-перемальовка",
+    "4": "Випадкова перемальовка"
+  },
+  "temperatureUnits": {
+    "0": "Цельсій °C",
+    "1": "Фаренгейт °F"
+  },
+  "btnLowHigh": {
+    "0": "Активний низьким рівнем",
+    "1": "Активний високим рівнем"
+  },
+  "btnActions": {
+    "0": "Ні (лише надсилання в MQTT та API)",
+    "1": "Перейти до годинника",
+    "2": "Перемкнути режим сну",
+    "3": "MP3: Відтворити/Пауза",
+    "4": "MP3: Попередній трек",
+    "5": "MP3: Наступний трек"
+  },
+  "sensorsbuttons": {
+    "sensors": {
+      "title": "Одиниці вимірювання та зсуви сенсорів",
+      "temperatureUnit": "Одиниця температури",
+      "temperatureOffset": "Зсув сенсора температури",
+      "humidityOffset": "Зсув сенсора вологості",
+      "pressureOffset": "Зсув сенсора тиску",
+      "gasOffset": "Зсув сенсора газу",
+      "luxOffset": "Зсув сенсора освітленості",
+      "ldrHistory": "Кількість попередніх значень LDR",
+      "ldrHint": "Введіть будь-яке значення, якщо використовуєте BH1750"
+    },
+    "hardware": {
+      "title": "Обладнання сенсорів",
+      "i2c": "Сенсори I²C",
+      "i2cDesc": "Якщо ви використовуєте BH1750, BME280 або BME680, їм потрібні два піни для зв'язку.",
+      "scl": "Пін SCL",
+      "sda": "Пін SDA",
+      "i2cHint": "Оберіть будь-яке значення, якщо не використовуєте I²C сенсори",
+      "onewire": "Сенсори OneWire",
+      "onewireDesc": "Якщо ви використовуєте сенсори типу DHT22, їм потрібен один пін.",
+      "onewirePin": "Пін сенсора DHT",
+      "onewireHint": "Оберіть будь-яке значення, якщо не використовуєте OneWire сенсори",
+      "ldr": "LDR",
+      "ldrDesc": "Якщо ви не використовуєте BH1750, оберіть тип LDR та резистор.",
+      "ldrType": "Тип сенсора освітленості",
+      "ldrHint": "Оберіть будь-яке значення, якщо використовуєте BH1750 або не використовуєте датчик освітленості",
+      "ldrResistor": "Значення резистора підтяжки"
+    },
+    "buttons": {
+      "title":         "Обладнання кнопок",
+      "saveConfig":    "Зберегти налаштування",
+      "left": {
+        "enabled": "Ліва кнопка активна",
+        "pin": "Пін для лівої кнопки",
+        "signal": "Тип сигналу лівої кнопки",
+        "action": "Дія лівої кнопки"
+      },
+      "middle": {
+        "enabled": "Середня кнопка активна",
+        "pin": "Пін для середньої кнопки",
+        "signal": "Тип сигналу середньої кнопки",
+        "action": "Дія середньої кнопки"
+      },
+      "right": {
+        "enabled": "Права кнопка активна",
+        "pin": "Пін для правої кнопки",
+        "signal": "Тип сигналу правої кнопки",
+        "action": "Дія правої кнопки"
+      },
+      "actionsTitle": "Дії кнопок"
+    }
+  }
 }
