--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -201,5 +201,66 @@
       },
       "actionsTitle": "Дії кнопок"
     }
+  },
+  "statistics": {
+    "demoNotice": "Ви зараз в демо-режимі — справжнє обладнання не підключено.",
+    "activateTitle": "Активуйте телеметрію, щоб переглянути статистику.",
+    "activateText": "Щоб активувати телеметрію, перейдіть у",
+    "activateLink": "Налаштування та увімкніть \"Надсилати телеметричні дані\"",
+    "activateNote": "Після активації дані зʼявляться приблизно через одну хвилину.",
+    "thanks": "Ця статистика створена на основі телеметричних даних PixelIt за останні 30 днів.",
+    "thanksNote": "Дякуємо всім, хто ділиться з нами цими даними!",
+    "boards": "Плати",
+    "versions": "Версії",
+    "sensors": "Датчики",
+    "countries": "Країни",
+    "matrixTypes": "Типи матриць",
+    "usermap": "Карта користувачів"
+  },
+  "update": {
+    "firmware": "Прошивка",
+    "filesystem": "Файлова система",
+    "configTitle": "Конфігурація",
+    "selectFirmware": "Оберіть файл прошивки",
+    "selectFilesystem": "Оберіть файл файлової системи",
+    "selectConfig": "Оберіть файл конфігурації",
+    "updateFirmware": "Оновити прошивку",
+    "updateFilesystem": "Оновити файлову систему",
+    "configBackupRestore": "Резервне копіювання та відновлення конфігурації",
+    "restore": "Відновити",
+    "backup": "Зберегти",
+    "downloadStats": "Статистика завантажень",
+    "warningTitle": "Увага, зверніть увагу!",
+    "warningMessage": "Чи дійсно відновити конфігурацію на цьому PixelIt?",
+    "ignoreAndRestore": "Ігнорувати та відновити",
+    "cancel": "Скасувати"
+  },
+  "gallery": {
+    "mode8x8": "8×8 Пікселів",
+    "mode8x32": "8×32 Пікселів",
+    "liveDraw": "Живий малюнок",
+    "save": "Зберегти",
+    "animatedWarning": "Анімовані 8×32 зображення не підтримуються!",
+    "searchLabel": "Пошук за ім’ям або ID",
+    "loading": "Завантаження...",
+    "showOnDevice": "Показати на PixelIt"
+  },
+  "bmpDialog": {
+    "moreInfo": "Детальніше",
+    "iconId": "ID іконки",
+    "addedBy": "Додано",
+    "addedOn": "Дата додавання",
+    "animated": "Анімація",
+    "yes": "Так",
+    "no": "Ні",
+    "close": "Закрити"
+  },
+  "colorPickerTextField": {
+    "label": "Колір",
+    "hint": "Натисніть на поле зліва"
+  },
+  "downloadStats": {
+    "title": "Завантаження",
+    "notes": "Примітки до випуску"
   }
 }
