--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -54,6 +54,7 @@
       "title":               "Налаштування за замовчуванням",
       "matrixBrightness":    "Початкова яскравість матриці",
       "scrollDelay":         "Затримка прокрутки тексту",
+      "largerNumberIsSlower":"Чим більше число, тим повільніше",
       "hostname":            "Ім’я хоста",
       "note":                "Примітка",
       "bootScreen":          "Екран завантаження активний",
@@ -94,6 +95,12 @@
       "title":               "Телеметрія",
       "sendData":            "Надіслати дані",
       "sendNow":             "Відправити зараз"
+    },
+    "dialogs": {
+      "wifiResetLine1": "Ви збираєтеся видалити налаштування Wi-Fi, інші налаштування не будуть змінені!",
+      "wifiResetLine2": "Ви впевнені, що хочете продовжити?",
+      "factoryResetLine1": "Ви збираєтеся видалити всі налаштування, включно з налаштуваннями Wi-Fi!",
+      "factoryResetLine2": "Ви впевнені, що хочете продовжити?"
     }
   },
   "matrixTypes": {
@@ -262,5 +269,16 @@
   "downloadStats": {
     "title": "Завантаження",
     "notes": "Примітки до випуску"
+  },
+  "testArea": {
+    "liveview": "Живий перегляд",
+    "jsonString": "Рядок JSON",
+    "sendJson": "Надіслати JSON",
+    "textBrightness": "Текст / Яскравість",
+    "brightness": "Яскравість",
+    "textToSend": "Текст для надсилання",
+    "sendText": "Надіслати текст",
+    "bitmapArray": "Масив бітмапу",
+    "sendBitmap": "Надіслати бітмап"
   }
 }
