--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -81,7 +81,18 @@
       "utcOffset":           "Зсув UTC",
       "format24":            "24-годинний формат",
       "showSeconds":         "Показувати секунди",
-      "dst":                 "Літній час (DST)"
+      "dst":                 "Літній час (DST)",
+      "largeFont": "Великий шрифт годинника",
+      "fatFont": "Жирний шрифт годинника",
+      "weekdays": "Годинник з днями тижня",
+      "switchActive": "Перемикання годинник/дата активне",
+      "blinkSeparator": "Миготливий роздільник часу",
+      "startMonday": "Початок тижня з понеділка",
+      "dateFormat": "Формат дати ДД.ММ.",
+      "switchTime": "Час перемикання годинник/дата",
+      "autoFallback": "Автовідображення резервного часу",
+      "fallbackAnimation": "Анімація резерву",
+      "fallbackTime": "Час резерву"
     },
     "mqtt": {
       "title":               "MQTT",
@@ -89,18 +100,43 @@
       "server":              "Сервер",
       "port":                "Порт",
       "masterTopic":         "Головна тема",
-      "deviceTopic":         "Тема пристрою"
+      "deviceTopic":         "Тема пристрою",
+      "discoverable": "Зробити пристрій видимим для HomeAssistant",
+      "user": "Користувач",
+      "password": "Пароль",
+      "userHint": "необов’язково",
+      "passwordHint": "необов’язково"
+
     },
     "telemetry": {
       "title":               "Телеметрія",
       "sendData":            "Надіслати дані",
-      "sendNow":             "Відправити зараз"
+      "sendNow":             "Відправити зараз",
+      "preview": "Попередній перегляд даних",
+      "whyTitle": "Навіщо?",
+      "whyDesc1": "Телеметрія допомагає нам зрозуміти, яке обладнання використовується для PixelIt і які версії ПЗ у використанні.",
+      "whyDesc2": "Це мотивує нас як розробників бачити поширення й отримувати задоволення від розробки :)",
+      "thatWasIt": "Ось і все :)",
+      "data": {
+        "uuid": "UUID — згенерований хеш із апаратури ESP",
+        "version": "Версія прошивки PixelIt",
+        "build": "Назва секції збірки",
+        "matrix": "Тип і розмір матриці",
+        "sensors": "Використані датчики (типи)",
+        "country": "Країна (через GeoIP, але без IP-адреси)"
+      }
     },
     "dialogs": {
       "wifiResetLine1": "Ви збираєтеся видалити налаштування Wi-Fi, інші налаштування не будуть змінені!",
       "wifiResetLine2": "Ви впевнені, що хочете продовжити?",
       "factoryResetLine1": "Ви збираєтеся видалити всі налаштування, включно з налаштуваннями Wi-Fi!",
       "factoryResetLine2": "Ви впевнені, що хочете продовжити?"
+    },
+    "sound": {
+      "title": "Звук",
+      "initialVolume": "Гучність при запуску",
+      "rxPin": "DFPlayer RX пін (вхід)",
+      "txPin": "DFPlayer TX пін (вихід)"
     }
   },
   "matrixTypes": {
